# wraith-mcp

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_browser_manager.py  test_server.py
wraith_mcp/: browser_manager.py  mcp_sampling.py  server.py  stealth_scripts.py
