[project]
name = "stealth-browser-use-mcp"
version = "0.1.0"
description = "AI-native stealth browser MCP server for any AI agent — Browser Use + Patchright"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "KH" }]
keywords = ["mcp", "browser-use", "patchright", "stealth", "browser-automation", "ai-agent", "claude", "cursor", "codex", "opencode", "windsurf", "cline"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "browser-use>=0.12.0",
    "patchright>=1.49.0",
    "mcp[cli]>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.3.0"]

[project.urls]
Repository = "https://github.com/Koreahwan/stealth-browser-use-mcp"

[project.scripts]
stealth-browser-use-mcp = "stealth_browser_use_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stealth_browser_use_mcp"]
