[project]
name = "wraith-mcp"
version = "0.2.0"
description = "AI-native stealth browser MCP server — Browser Use + Patchright"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "KH" }]
keywords = ["mcp", "browser-use", "patchright", "stealth", "browser-automation", "ai-agent", "wraith", "cursor", "codex", "opencode", "windsurf", "cline"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "browser-use>=0.12.0",
    "patchright>=1.49.0",
    "mcp[cli]>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.3.0",
    "langchain-core>=0.3.0",
]

[project.urls]
Repository = "https://github.com/Koreahwan/wraith-mcp"

[project.scripts]
wraith-mcp = "wraith_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wraith_mcp"]
